AKS/gitops/workloads/nginx-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-test
  labels:
    app.kubernetes.io/part-of: platform
    app.kubernetes.io/managed-by: argocd
