AKS/gitops/workloads/nginx-test/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-test
  namespace: nginx-test
  labels:
    app.kubernetes.io/name: nginx-test
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    external-dns.alpha.kubernetes.io/hostname: nginx.ceedev.co.uk
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.ceedev.co.uk`)
      kind: Rule
      services:
        - name: nginx-test
          port: 80
  tls:
    secretName: nginx-test-tls
